force-app/main/default/objects/Competitor_Store__c/Competitor_Store__c.object-meta.xml
<CustomObject>
    <description>resolving Many-to-Many junction object</description>
    <label>Competitor Store</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Competitor Store ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Store</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>