force-app/main/default/objects/Competitor_Store__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Store</relationshipLabel>
    <relationshipName>Competitor_Store</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>