force-app/main/default/objects/Competitor_Store__c/fields/Competitor_Site__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Site__c</fullName>
    <label>Competitor Site</label>
    <referenceTo>Competitor_site__c</referenceTo>
    <relationshipLabel>Competitor Store</relationshipLabel>
    <relationshipName>Competitor_Store</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>