force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Sales__c</fullName>
    <label>Annual Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>