force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>