force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Open_Date__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>