force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Sales_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales_Ranking__c</fullName>
    <label>Sales Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>