force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Store_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Store_Size__c</fullName>
    <label>Store Size (m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>