force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Terms__c</fullName>
    <label>Terms</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>