force-app/main/default/objects/Competitor_Store__c/fields/Estimated_Yield__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Yield__c</fullName>
    <label>Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>