force-app/main/default/objects/Competitor_Store__c/fields/Flagship_Store__c.field-meta.xml
<CustomField>
    <fullName>Flagship_Store__c</fullName>
    <label>Flagship Store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>