force-app/main/default/objects/Competitor_Store__c/fields/Store_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Status__c</fullName>
    <label>Store Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>