force-app/main/default/objects/Competitor_Store__c/fields/Unique_Store__c.field-meta.xml
<CustomField>
    <fullName>Unique_Store__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>a unique field to ensure the store is unique in VR1</description>
    <label>Unique Store</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>