force-app/main/default/objects/Competitor_Store__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Competitor Stores</relationshipLabel>
    <relationshipName>Competitor_Store</relationshipName>
    <type>Lookup</type>
</CustomField>